[gd_scene load_steps=10 format=2]

[ext_resource path="res://EndScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/endscreencontainer.png" type="Texture" id=2]
[ext_resource path="res://assets/RobotoMono-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/timeclock.png" type="Texture" id=4]
[ext_resource path="res://assets/best.png" type="Texture" id=5]
[ext_resource path="res://assets/RobotoMono-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=2]
size = 58
outline_size = 1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[node name="EndScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -566.0
margin_right = 599.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.376471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ColorRect"]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -175.281
margin_right = 175.0
margin_bottom = 174.719
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
margin_left = 86.1527
margin_top = 97.39
margin_right = 390.153
margin_bottom = 183.39
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "u winned"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="OptionButton" parent="."]
margin_left = 103.0
margin_top = 387.0
margin_right = 198.0
margin_bottom = 420.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 207.0
margin_top = 388.0
margin_right = 381.0
margin_bottom = 419.0
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Offset" type="Tween" parent="."]

[node name="Time" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -70.0
margin_right = 200.0
margin_bottom = 100.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Time"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -10.0
margin_right = 150.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "--.--"
align = 1

[node name="Best" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -70.0
margin_bottom = 100.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Best"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -10.0
margin_right = 150.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "--.--"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="Difficulty" to="." method="_on_Difficulty_item_selected"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
